--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.3.0"
+    "@astrojs/mdx": "^4.0.8",
+    "@astrojs/preact": "^4.0.4",
+    "@astrojs/sitemap": "^3.2.1",
+    "@tailwindcss/vite": "^4.0.9",
+    "astro": "^5.3.0",
+    "preact": "^10.26.2",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^4.0.9"
   }
 }
