--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.2.2",
     "@astrojs/mdx": "^4.0.8",
     "@astrojs/preact": "^4.0.4",
     "@astrojs/sitemap": "^3.2.1",
