--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "preact": "^10.26.2",
     "tailwind": "^4.0.0",
     "tailwindcss": "^4.0.9"
+  },
+  "devDependencies": {
+    "wrangler": "^3.110.0"
   }
 }
