--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.0.8",
+    "@astrojs/netlify": "^6.2.1",
     "@astrojs/preact": "^4.0.4",
     "@astrojs/sitemap": "^3.2.1",
     "@tailwindcss/vite": "^4.0.9",
