--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.0.8",
+    "@astrojs/mdx": "^4.1.0",
     "@astrojs/netlify": "^6.2.1",
     "@astrojs/preact": "^4.0.4",
+    "@astrojs/react": "^4.2.1",
     "@astrojs/sitemap": "^3.2.1",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@tailwindcss/vite": "^4.0.9",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "astro": "^5.3.0",
     "preact": "^10.26.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^4.0.9"
   }
